--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
         FTP_SERVER: ${{ secrets.FTP_SERVER }}
         FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
         FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+        REMOTE_DIR: ${{ secrets.REMOTE_DIR }}
+        LOCAL_DIR: ${{ secrets.LOCAL_DIR }}
         ARGS: --delete
         # --delete arg will delete files on the server if you've deleted them in git
 
