--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,12 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: FTP-Deploy-Action
-      uses: SamKirkland/FTP-Deploy-Action@2.0.0
-      env:
-        FTP_SERVER: ${{ secrets.FTP_SERVER }}
-        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-        FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-        REMOTE_DIR: ${{ secrets.REMOTE_DIR }}
-        LOCAL_DIR: ${{ secrets.LOCAL_DIR }}
-        ARGS: --delete
+      uses: SamKirkland/FTP-Deploy-Action@master
+      with:
+        ftp-server: ${{ secrets.FTP_SERVER }}
+        ftp-username: ${{ secrets.FTP_USERNAME }}
+        ftp-password: ${{ secrets.FTP_PASSWORD }}
+        remote-dir: ${{ secrets.REMOTE_DIR }}
+        local-dir: ${{ secrets.LOCAL_DIR }}
         # --delete arg will delete files on the server if you've deleted them in git
 
