--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ jobs:
   FTP-Deploy-Action:
     name: FTP-Deploy-Action
     runs-on: ubuntu-latest
-    timeout-minutes: 15
     steps:
     - uses: actions/checkout@master
     - name: FTP-Deploy-Action
@@ -19,5 +18,8 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         server-dir: ${{ secrets.REMOTE_DIR }}
         local-dir: ${{ secrets.LOCAL_DIR }}
+        args: --timeout 120
+        args: --passive
+
         dangerous-clean-slate: true
         # --delete arg will delete files on the server if you've deleted them in git
