--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
   FTP-Deploy-Action:
     name: FTP-Deploy-Action
     runs-on: ubuntu-latest
+    ftp-passive: true
     steps:
     - uses: actions/checkout@master
     - name: FTP-Deploy-Action
